Complete code for easy debug with existing browser session

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,7 @@
+[env]
+debug = True
+
 [session]
-session_id = 12345
+session_id = e664baa2368f6414d2509347d6020ca5
+ce_url = http://localhost:35623
 
